--- a/src/components/HeaderNav.astro
+++ b/src/components/HeaderNav.astro
@@ -138,6 +138,7 @@ const list = links;
     padding: 0.35rem 0.2rem;
     border-radius: 0.25rem;
     position: relative;
+    font-weight: 900;
   }
 
   .nav a::after {
