--- a/src/pages/privacy-policy/index.astro
+++ b/src/pages/privacy-policy/index.astro
@@ -20,8 +20,14 @@ const html = page?.content?.rendered || "<p>Contenu à venir.</p>";
 ---
 
 <SiteLayout title={title}>
-  <article class="wp-content">
+  <article class="wp-content conf">
     <h1 set:html={title} />
     <div class="entry" set:html={html} />
   </article>
 </SiteLayout>
+
+<style is:global>
+  .conf {
+    margin-top: 150px;
+  }
+</style>
